objects/ASI_MFM_GRNI_Report__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Amount__c</fullName>
        <formula>IF( NOT( ISBLANK( ASI_MFM_PO_Receipt_Item__r.ASI_MFM_Amount__c ) ) , 
0 - ASI_MFM_PO_Receipt_Item__r.ASI_MFM_Amount__c, 

 IF( NOT( ISBLANK( ASI_MFM_Payment_Line_Item__r.ASI_MFM_Payment_Amount__c ) ) , ASI_MFM_Payment_Line_Item__r.ASI_MFM_Payment_Amount__c, 

0) )</formula>
        <label>합계 : LT 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <formula>IF(  NOT(ISBLANK(TEXT(ASI_MFM_PO_Number__r.ASI_MFM_Company_Code__c))) , TEXT(ASI_MFM_PO_Number__r.ASI_MFM_Company_Code__c) , &apos;&apos;)</formula>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Explanation__c</fullName>
        <formula>IF(NOT(ISBLANK( ASI_MFM_PO_Receipt_Item__c )), 

&apos;PO Receipt Engagement&apos; &amp; &apos;_&apos; &amp;
CASE(MONTH(ASI_MFM_PO_Receipt_Date__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sept&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;&quot;)
 &amp; &apos; &apos; &amp; TEXT( YEAR( ASI_MFM_PO_Receipt_Date__c )), 

 IF(NOT(ISBLANK(ASI_MFM_Payment_Line_Item__c)), 
ASI_MFM_Supplier_Name__c &amp; &apos; &apos; &amp; 
 IF( ISBLANK(ASI_MFM_Payment_Line_Item__r.ASI_MFM_AP_Remark__c) ,&apos;&apos;, ASI_MFM_Payment_Line_Item__r.ASI_MFM_AP_Remark__c) , 

&apos;&apos;))</formula>
        <label>Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GRIR__c</fullName>
        <formula>IF( NOT( ISBLANK( ASI_MFM_PO_Receipt_Item__c ) ) , &apos;GR&apos;,  
IF( NOT( ISBLANK( ASI_MFM_Payment_Line_Item__c ) ) , &apos;IR&apos;, 
&apos;&apos;) )</formula>
        <label>GRIR 구분</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <formula>IF( ISBLANK(ASI_MFM_PO_Receipt_Item__r.ASI_MFM_Post_G_L_Date__c),
IF( ISBLANK(ASI_MFM_Payment_Line_Item__r.ASI_MFM_G_L_Date__c ),

null,
ASI_MFM_Payment_Line_Item__r.ASI_MFM_G_L_Date__c), 
ASI_MFM_PO_Receipt_Item__r.ASI_MFM_Post_G_L_Date__c)</formula>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Date__c</fullName>
        <formula>IF( ISBLANK( ASI_MFM_Payment_Line_Item__r.ASI_MFM_Invoice_Date__c ) , null, ASI_MFM_Payment_Line_Item__r.ASI_MFM_Invoice_Date__c)</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Number__c</fullName>
        <formula>IF( ISBLANK( ASI_MFM_Payment_Line_Item__r.ASI_MFM_Invoice_Number__c ) , &apos;&apos;,  ASI_MFM_Payment_Line_Item__r.ASI_MFM_Invoice_Number__c )</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Number</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>GRNI Reports</relationshipLabel>
        <relationshipName>GRNI_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Date__c</fullName>
        <formula>IF( ISBLANK( ASI_MFM_PO_Receipt_Item__r.ASI_MFM_Receipt_Date__c ) , null, ASI_MFM_PO_Receipt_Item__r.ASI_MFM_Receipt_Date__c)</formula>
        <label>PO Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Receipt Item</label>
        <referenceTo>ASI_MFM_PO_Receipt_Item__c</referenceTo>
        <relationshipLabel>GRNI Reports</relationshipLabel>
        <relationshipName>GRNI_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PR_Requester__c</fullName>
        <formula>ASI_MFM_PO_Number__r.ASI_MFM_PR_Requester__c</formula>
        <label>PR Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Line Item</label>
        <referenceTo>ASI_MFM_Payment_Line_Item__c</referenceTo>
        <relationshipLabel>GRNI Reports</relationshipLabel>
        <relationshipName>GRNI_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Requester__c</fullName>
        <formula>IF( NOT( ISBLANK( ASI_MFM_Payment_Line_Item__c ) ) , 
ASI_MFM_Payment_Line_Item__r.CreatedBy.FirstName &amp; &apos; &apos; &amp;  ASI_MFM_Payment_Line_Item__r.CreatedBy.LastName  , &apos;&apos;)</formula>
        <label>Payment Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Report_Token__c</fullName>
        <description>Use the generate time string ( the number of milliseconds since January 1, 1970, 00:00:00 GMT ) for unique report</description>
        <label>Report Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Supplier_Name__c</fullName>
        <formula>IF( ISBLANK( ASI_MFM_PO_Number__r.ASI_MFM_Supplier_Name__r.Name ) , &apos;&apos;, ASI_MFM_PO_Number__r.ASI_MFM_Supplier_Name__r.Name)</formula>
        <label>Address Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Supplier_Number__c</fullName>
        <formula>ASI_MFM_PO_Number__r.ASI_MFM_Supplier_Number__c</formula>
        <label>Address Number</label>
        <type>Text</type>
    </fields>
    <label>GRNI Report</label>
    <nameField>
        <displayFormat>GRNI-{YY}{000000}</displayFormat>
        <label>GRNI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRNI Reports</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_GRNI_Report</fullName>
        <active>true</active>
        <label>KR GRNI Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>